feat: update entities
